--- a/n-tcrs/src/main/resources/tcrs/login.fxml
+++ b/n-tcrs/src/main/resources/tcrs/login.fxml
@@ -13,4 +13,5 @@
     <PasswordField fx:id="passwordField" promptText="Password" maxWidth="200.0" minWidth="10.0" prefWidth="150.0"/>
     <Button fx:id="loginButton" text="Log In" onAction="#handleLoginButtonAction" />
     <Label fx:id="errorMessageLabel" text="" style="-fx-text-fill: red;" />
+    <Label fx:id="loginValidation" text="Incorrect username or password, please try again. " style="-fx-font-size: 12px; -fx-font-weight: bold; -fx-font-color: red;" visible="false"  />
 </VBox>
