--- a/n-tcrs/src/main/resources/tcrs/styling.css
+++ b/n-tcrs/src/main/resources/tcrs/styling.css
@@ -1,33 +1,34 @@
-.prov-btn-class {
+.nav-btn-class {
     -fx-background-color: #3333ff;
         background-color: #3333ff;
     -fx-font-weight: bold;
         font-weight: bold;
     -fx-text-fill: White;
 }
-.prov-btn-class:hover {
+.nav-btn-class:hover {
     -fx-font-weight: Bolder;
         font-weight: Bolder;
     -fx-text-fill: Black;
 }
-.prov-btn-current {
+.nav-btn-current {
     -fx-background-color: #f5f5f5;
         background-color: #f5f5f5;
     -fx-font-weight: bold;
         font-weight: bold;
     -fx-text-fill: Black;
 }
-.prov-btn-search {
-    -fx-background-color: #3333ff;
-        background-color: #3333ff;
-    -fx-text-fill: White;
-    -fx-height: 20;
-        height: 20;
-}
-.prov-btn-search:hover {
-    -fx-background-color: #3333ff;
-        background-color: #3333ff;
+.welcome-class {
+    -fx-font-weight :bold;
+        font-weight: bold;
     -fx-text-fill: Black;
-    -fx-height: 20;
-        height: 20;
+}
+.btn-search {
+    -fx-background-color: #3333ff;
+        background-color: #3333ff;
+    -fx-font-weight :bold;
+        font-weight: bold;
+    -fx-text-fill: White;
+}
+.btn-search:hover {
+    -fx-text-fill: Black;
 }
