--- a/n-tcrs/src/main/resources/tcrs/dashboardAdmin.fxml
+++ b/n-tcrs/src/main/resources/tcrs/dashboardAdmin.fxml
@@ -57,15 +57,18 @@
                   <Font name="Helvetica" size="17.0" />
                </font>
             </Label>
-            <Button layoutX="310.0" layoutY="40.0" mnemonicParsing="false" prefHeight="20.0" prefWidth="100.0" styleClass="btn-search" stylesheets="@styling.css" text="Create User" onAction="#switchToCreateUser" AnchorPane.leftAnchor="310.0" AnchorPane.topAnchor="40.0" />
+            <Button layoutX="310.0" layoutY="40.0" mnemonicParsing="false" onAction="#switchToCreateUser" prefHeight="20.0" prefWidth="100.0" styleClass="btn-search" stylesheets="@styling.css" text="Create User" AnchorPane.leftAnchor="310.0" AnchorPane.topAnchor="40.0" />
             <Pane prefHeight="250.0" prefWidth="600.0" AnchorPane.rightAnchor="60.0" AnchorPane.topAnchor="90.0">
                <children>
-                  <TableView prefHeight="250.0" prefWidth="600.0">
+                  <TableView fx:id="userTableView" prefHeight="250.0" prefWidth="600.0">
                     <columns>
-                      <TableColumn prefWidth="75.0" text="User" />
-                      <TableColumn prefWidth="75.0" text="Type" />
-                        <TableColumn prefWidth="75.0" text="Status" />
+                      <TableColumn fx:id="userColumn" prefWidth="75.0" text="User" />
+                      <TableColumn fx:id="typeColumn" prefWidth="75.0" text="Type" />
+                        <TableColumn fx:id="statusColumn" prefWidth="75.0" text="Status" />
                     </columns>
+                     <columnResizePolicy>
+                        <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+                     </columnResizePolicy>
                   </TableView>
                </children>
             </Pane>
